# fw16-synth

./: Design-Spec.md  README.md  config.py  flake.nix  fw16_synth.py  gitignore  launch.sh  pyproject.toml  test_imports.py
docs/: DEPLOYMENT_GUIDE.md  Design-Spec-Claude-Output.md  NIX_INTEGRATION.md  ORGANIZATION_SUMMARY.md  PRODUCTION_IMPLEMENTATION.md  README.md  glitch_prevention.md
src/: __init__.py  config.py  fw16_synth.py  tui.py
src/fw16_synth/engine/: __init__.py  fluidsynth_engine.py
src/fw16_synth/input/: __init__.py  keyboard_input.py  touchpad_input.py
src/fw16_synth/midi/: __init__.py  midi_handler.py
src/fw16_synth/production/: __init__.py  config_manager.py  config_validator.py  device_manager.py  error_handler.py  glitch_integration.py  glitch_prevention.py  health_monitor.py  logging.py  observability.py  resource_manager.py  retry_manager.py  synth_controller.py
src/fw16_synth/soundfont/: __init__.py  manager.py
src/production/: __init__.py
tests/: README.md  __init__.py  benchmarks.py  test_config.py  test_core_functionality.py  test_extended_coverage.py  test_glitch_prevention.py  test_nix_compatible.py  test_production_modules.py  test_production_modules_improved.py
