[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fw16-synth"
version = "2.1.0"
description = "Professional FluidSynth Controller for Framework 16"
readme = "docs/README.md"
license = {file = "LICENSE"}
authors = [{name = "DeMoD LLC"}]
keywords = ["synthesizer", "midi", "music", "fluidsynth", "framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

requires-python = ">=3.10"
dependencies = [
    "evdev",
    "pyfluidsynth",
    "python-rtmidi",
    "numpy",
    "psutil",
    "pyyaml; extra == 'config'",
    "pytest; extra == 'dev'",
]

[project.optional-dependencies]
config = ["pyyaml"]
dev = [
    "black",
    "mypy",
    "pytest",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/ALH477/fw16-synth"
Repository = "https://github.com/ALH477/fw16-synth"
Issues = "https://github.com/ALH477/fw16-synth/issues"

[project.scripts]
fw16-synth = "fw16_synth.fw16_synth:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fw16_synth = ["production/*.py", "production/*/*.py"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"